@@ -20,6 +20,7 @@ features:
 - cumulative constraint handler adds disjunctive constraints (cumulative with capacity 1) for all jobs which cannot
   be processed in parallel
 - added new clique extraction algorithm for linear constraints
+- added missing debugging solution check for cliques
 
 performance improvements:
 - conflict consisting of exactly two binary variables will be handled as set-packing constraint instead of an logicor
